# photomakerapp

./: .gitignore  CMakeLists.txt  README.md
resources/: CMakeLists.txt
script/: CMakeLists.txt  photomakerapp.sh
src/: CMakeLists.txt  main.cpp
src/command/: AdjustHueCommand.h  AdjustSaturationCommand.h  AdjustValueCommand.h  BinaryCommand.h  BlurCommand.h  CMakeLists.txt  CartoonCommand.h  Command.h  CommandHandler.cpp  CommandHandler.h  CropCommand.h  FlipCommand.h  GrayscaleCommand.h  LaplacianCommand.h  LaplatianCommand.h  MirrorCommand.h  NegativeCommand.h  SharpenCommand.h
src/core/: CMakeLists.txt  HSVPixel.cpp  HSVPixel.h  Image.cpp  Image.h  ImageException.h  ImageProcessor.cpp  ImageProcessor.h  KernelMatrix.cpp  KernelMatrix.h  KernelTemplate.cpp  KernelTemplate.h  Pixel.cpp  Pixel.h  PixelMatrix.cpp  PixelMatrix.h
src/core/pixels/: AbstractPixel.cpp  AbstractPixel.h  HSVPixel.cpp  HSVPixel.h  RGBPixel.cpp  RGBPixel.h
src/model/: CMakeLists.txt  Image.h  KernelMatrix.cpp
src/utils/: CMakeLists.txt  FileHandler.cpp  KernelTemplate.cpp  KernelTemplate.h  PixelUtil.cpp  PixelUtil.h  ViewUtils.cpp
src/view/: CMakeLists.txt  ImageWrapper.cpp  ImageWrapper.h  MainView.cpp  MainView.h  MainViewController.cpp  MainViewController.h  MainViewWindow.h  Observer.h  Subject.h
src/view/subwidgets/: AbstractSheet.h  ColorSheet.h  CropSheet.h  FilterSheet.h  LeftMenuBar.h  RenderArea.cpp  RenderArea.h  TopMenuBar.h
test/: CMakeLists.txt  TestExecutionTime.cpp  TestImageProcessor.cpp  TestPixelConversion.cpp  TestPixelMatrix.cpp  TestRectangleImage.cpp  TestSquareImage.cpp  TestUndoRedo.cpp  mainTestPhotoMakerApp.cpp
test/lib/googletest/googlemock/docs/: cook_book.md
test/lib/googletest/googletest/docs/: primer.md
test/lib/googletest/googletest/include/gtest/internal/: gtest-internal.h
test/lib/googletest/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-port.cc  gtest-printers.cc  gtest.cc
test/testImage/: Vd-Sharp.ppm  leo.ppm
test/testImage/convolution/: Vd-Orig.ppm  Vd-Sharp-Sub-bottom.ppm  Vd-Sharp-Sub-center.ppm  Vd-Sharp-Sub-left.ppm  Vd-Sharp-Sub-right.ppm  Vd-Sharp-Sub-top.ppm
test/testImage/crop/: leo-crop.ppm  leo-flip.ppm  leo-mirror.ppm
test/testImage/hsv-space/: bridge-h180.ppm  bridge-h330.ppm  bridge-h35.ppm  bridge-orig.ppm  bridge-s-100.ppm  bridge-s100.ppm  bridge-s50.ppm  bridge-v-100.ppm  bridge-v100.ppm  bridge-v50.ppm
test/testImage/hsv-space/sub-image/: bridge-h.ppm  bridge-s.ppm  bridge-v.ppm
